# WoT-Stream

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  Launch.vs.json  README.md  des_doc  wot-stream.sln
dependencies/: note.txt
dependencies/obs_sln/: make_obs_sln_here
deploy/: install-wsr.iss
ext/: wot-stream.sln
extension/: entry.cpp  shared.h
sources/: CMakeLists.txt
sources/core/: CMakeLists.txt  CMakeSettings.json  api.cpp  api.h  entry.cpp  extension.cpp  extension.h  test.cpp  win_sock_server.cpp  win_sock_server.h  wot_stream.cpp  wot_stream.h
sources/core/dependencies/: note.txt
sources/core/extension/: api.cpp  api.h  entry_tmp.cpp  extension.cpp  extension.h  interfaces.h  test.cpp
sources/core/extension/helpers/: command.h
sources/core/extension/obs_management/: extension.cpp  extension.h  modules_loader.cpp  modules_loader.h  obs_context.cpp  obs_context.h  output.h  settings.cpp  settings.h  source.h
sources/core/extension/obs_management/encoders/: encoder.cpp  encoder.h
sources/core/extension/obs_management/outputs/: output.cpp  output.h
sources/core/extension/obs_management/services/: service.cpp  service.h
sources/core/extension/obs_management/sources/: source.cpp  source.h  wot_scene.cpp  wot_scene.h
sources/core/extension/utilities/: simple_fsm.cpp  simple_fsm.h
sources/core/obs_management/: modules_loader.cpp  modules_loader.h  settings.cpp  settings.h
sources/core/obs_management/encoders/: encoder.cpp  encoder.h
sources/core/obs_management/outputs/: output.cpp  output.h
sources/core/obs_management/services/: service.cpp  service.h
sources/core/obs_management/sources/: source.h  wot_scene.cpp  wot_scene.h
sources/core/sockets/: server.cpp  server.h  socket.cpp  socket.h
sources/mod/: mod_wot_stream.py  wot_stream.as  wot_stream_client.py  wot_stream_log.py  wot_stream_remote.py  wot_stream_view_model.py
sources/vc_controllers/: mod_wot_stream.py  wot_stream.py
sources/views/: window_example.as  wot_stream.as
(+54 files in other folders)
